--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>&lt;model-viewer&gt; AR on iPhone</title>
-    <meta charset="utf-8" />
-    <meta name="description" content="&lt;model-viewer&gt; template with iOS Quick Look support" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link type="text/css" href="./styles.css" rel="stylesheet" />
+    <title>&lt;model-viewer&gt; template</title>
+    <meta charset="utf-8">
+    <meta name="description" content="&lt;model-viewer&gt; template">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" href="./styles.css" rel="stylesheet"/>
   </head>
   <body>
-    <!-- 1) Make sure you're serving this HTML + Testha02.glb + Testha02.usdz via HTTPS. -->
-    <!-- 2) Open this same URL in Safari on iPhone (not Chrome). -->
-
+    <!-- <model-viewer> HTML element -->
+    <!-- Removed “autoplay” so animation won’t start until user taps -->
     <model-viewer
+      id="modelViewer"
       src="Testha02.glb"
-      ios-src="Testha02.usdz"
       ar
       ar-modes="webxr scene-viewer quick-look"
       camera-controls
       tone-mapping="neutral"
       poster="poster.webp"
       shadow-intensity="1"
-      autoplay
-      animation-name="all"
-      style="width: 100%; height: 100vh;"
     >
       <div class="progress-bar hide" slot="progress-bar">
         <div class="update-bar"></div>
@@ -33,15 +29,25 @@
       </button>
 
       <div id="ar-prompt">
-        <img src="ar_hand_prompt.png" alt="AR prompt" />
+        <img src="ar_hand_prompt.png" alt="AR prompt">
       </div>
     </model-viewer>
 
-    <script src="script.js"></script>
+    <script>
+      // Grab the <model-viewer> element
+      const modelViewer = document.querySelector('#modelViewer');
+
+      // Ensure animation is paused on load (no autoplay)
+      modelViewer.pause();
+
+      // When the user taps (either to place in AR or to tap the model),
+      // start playing the animation
+      modelViewer.addEventListener('click', () => {
+        modelViewer.play();
+      });
+    </script>
+
     <!-- Loads <model-viewer> for browsers: -->
-    <script
-      type="module"
-      src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"
-    ></script>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
   </body>
 </html>
