--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       shadow-intensity="1"
       animation-name="all"
       autoplay
-      reveal="auto"                       <!-- ✅ Always show model preview -->
-      camera-orbit="0deg 75deg 0.5m"      <!-- ✅ Zoom and angle control -->
-      auto-rotate                         <!-- ✅ Shows 3D depth -->
+      reveal="auto"                      
+      camera-orbit="0deg 75deg 0.5m"     
+      auto-rotate                        
       style="width:100%; height:100vh;"
     >
       <div class="progress-bar hide" slot="progress-bar">
